# paramat-test

./: .readthedocs.yaml  README.md  README.rst  scratch.py  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
src/: lumache.py
src/paramat_test/: fitting.py  models.py  plotting.py  poi_reader.py  preparing.py  processing.py  receipts.py  sampling.py  stress_calcs.py
