[metadata]
name = paramat-test
version = 0.1
author = Daniel Slater
author_email = sltdan002@myuct.ac.za
description = Test package for paramat.
long_description = file: README.rst
long_description_content_type = text/reStructuredText
url = https://github.com/dan-slater/paramat-test
project_urls =
    Documentation = https://paramat-test.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src